[package]
name = "RustDataFusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = "16.0.0"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "RustDataFusion"
path = "main.rs"
